@@ -1,3 +1,7 @@
+2000-01-25  Laurent Pautet  <pautet@scapin.enst.fr>
+
+	* xe_lead.adb: Remove some quote on the remote shell command line.
+
 2000-01-24  Laurent Pautet  <pautet@scapin.enst.fr>
 
 	* xe_stubs.adb: Provide a new parameter Rsh_Options to Launch.
